@@ -17,9 +17,10 @@ eggs =
 setuptools =
 # lxml = 4.7.1
 six = 1.10.0
-# selenium = 4.8.0
-# Pillow = 9.4.0
-# wheel = 0.38.4
+selenium = 4.14.0
+robotframework-seleniumlibrary = 6.1.3
+Pillow = 9.4.0
+wheel = 0.38.4
 
 [sources]
 collective.plonefinder = git ${remotes:collective}/collective.plonefinder.git pushurl=${remotes:collective_push}/collective.plonefinder.git branch=plone5
