@@ -8,6 +8,4 @@ six = 1.9.0
 collective.recipe.template = 1.11
 plone.recipe.codeanalysis = 2.0
 zest.releaser = 6.22.1
-pytest = 4.6.11
-gocept.pytestlayer = 6.3
 beautifulsoup4 = 4.9.3
